--- a/index.css
+++ b/index.css
@@ -5,39 +5,36 @@
 }
 
 .navbar {
-  height: 80px;
+  background-color: grey;
+  background-size: cover;
+  background-blend-mode: overlay;
+  height: auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 90%;
-  font-size: 1.2rem;
+  flex-direction: column;
   position: relative;
+  max-width: 100rem;
+  margin: 5px auto;
 }
 
 #welcome {
   font-weight: bold;
+  margin: 5% 10px;
+}
+
+#welcome.is-active {
+  overflow: hidden;
 }
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: auto;
-  margin: 0;
-  width: 100%;
-  position: absolute;
-  top: -1000px;
-  opacity: 1;
-  transition: all 0.5s ease;
-  z-index: -1;
-  right: 0%;
+  height: 0;
+  overflow: hidden;
+  width: 100px;
+  transition: 250ms height ease-in-out;
 }
 
 .nav-menu.active {
-  top: 40%;
-  opacity: 1;
-  transition: all 0.5s ease;
-  z-index: 99;
-  height: 120px;
-  font-size: 20px;
+  height: 200vh;
 }
 
 .menu-toggle .bar {
@@ -55,7 +52,7 @@
 }
 
 .nav-links {
-  text-align: right;
+  text-align: left;
   padding: 15px;
   width: 80%;
   right: 0%;
@@ -70,9 +67,14 @@
 
 #mobile-menu {
   position: absolute;
-  top: 20%;
+  top: 15%;
   right: 5%;
   transform: translate(5%, 20%);
+}
+
+#mobile-menu.is-active {
+  position: absolute;
+  top: 1%;
 }
 
 #mobile-menu.is-active .bar:nth-child(2) {
@@ -619,8 +621,61 @@ a:hover {
 }
 
 @media only screen and (min-width: 1100px) {
+  .nav-menu {
+    display: flex;
+    grid-template-rows: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: -1;
+    right: 0%;
+  }
+
+  .nav-menu.active {
+    top: 40%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 120px;
+    font-size: 20px;
+  }
+
   .menu-toggle .bar {
-    display: none;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease;
+    background: #000;
+    cursor: pointer;
+    display: block;
+  }
+
+  .navbar-item {
+    width: 100%;
+  }
+
+  .nav-links {
+    text-align: right;
+    padding: 15px;
+    width: 80%;
+    right: 0%;
+    display: table;
+    color: #fff;
+  }
+
+  .nav-links:hover {
+    color: #3b6645;
+    transition: all 0.3s ease;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
   }
 
   #welcome {
