--- a/index.css
+++ b/index.css
@@ -436,7 +436,7 @@ ul {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: auto auto 5%;
+  margin: 10% 2% 5%;
 }
 
 .attribute-ellip {
@@ -457,7 +457,8 @@ ul {
 
 .attri-content {
   padding: 0;
-  margin: 0;
+  margin: 40px;
+  width: 70%;
   list-style-type: none;
 }
 
@@ -477,12 +478,12 @@ ul {
   flex-direction: row;
   font-size: 12px;
   flex-wrap: wrap;
-  text-align: center;
+  position: relative;
   color: #60c095;
   background-color: rgb(255, 255, 255);
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 20%;
+  width: 50px;
   padding-top: 2%;
   padding-right: 4%;
   padding-bottom: 2%;
@@ -490,7 +491,7 @@ ul {
   float: left;
   letter-spacing: 0.01em;
   justify-content: space-around;
-  margin-left: 3%;
+  margin-left: 2%;
   margin-bottom: 7%;
 }
 
