--- a/index.css
+++ b/index.css
@@ -245,24 +245,23 @@ main {
 
 .works {
   background-color: rgba(255, 255, 255, 1);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  row-gap: 50px;
+  grid-template-columns: auto auto auto;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .grid {
   width: auto;
   height: auto;
   align-items: start;
-  margin-top: 5%;
 }
 
 .grid-item {
   display: inline-block;
   background-color: rgba(255, 255, 255, 1);
   border: 6px solid #e5e5e5;
-  width: 60%;
   height: 100%;
   margin: auto;
   border-radius: 25px;
@@ -698,7 +697,7 @@ a:hover {
 
   .grid-item {
     margin-left: 6%;
-    width: 70%;
+    width: 60%;
   }
 
   .flex-container {
