--- a/index.css
+++ b/index.css
@@ -333,6 +333,7 @@ ul {
 }
 
 .seeprojects {
+  display: block;
   text-decoration: none;
   text-align: center;
   margin-top: 8px;
@@ -341,12 +342,21 @@ ul {
   background: #36b37f;
   position: relative;
   opacity: 1;
-  display: inline-block;
   transition: all  0.5s ease;
 }
 
-.seeprojects #work-id {
-  display: none;
+.button-container {
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.button-container.show {
+  pointer-events: auto;
+  opacity: 1;
+}
+
+#work-id {
   position: absolute;
   color: black;
   width: 160px;
@@ -360,7 +370,7 @@ ul {
   margin-left: -80px;
 }
 
-.seeprojects .show {
+#work-id.show {
   display: block;
   transition: all  0.5s ease;
   cursor: pointer;
