--- a/index.css
+++ b/index.css
@@ -346,37 +346,8 @@ ul {
   transition: all  0.5s ease;
 }
 
-.seeprojects.show {
-  visibility: visible;
-}
-
-.seeprojects .id {
-  visibility: hidden;
-  position: absolute;
-  color: black;
-  width: 160px;
-  background-color: #555;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
-}
-
-.seeprojects .id::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
 .content-btn {
+  flex-direction: column;
   border-radius: 4px;
   padding: 3%;
   margin: 5% 35% 5%;
